Project

General

Profile

Actions

Bug #26949

closed

deadlock on shutdown in RGWIndexCompletionManager::stop()

Added by Casey Bodley over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Program terminated with signal 6, Aborted.
#0  0x00007fb52240d59b in raise () from /lib64/libpthread.so.0
#0  0x00007fb52240d59b in raise () from /lib64/libpthread.so.0
#1  0x0000556edb3754b6 in reraise_fatal (signum=6) at /path/to/ceph/src/global/signal_handler.cc:74
#2  handle_fatal_signal (signum=6) at /path/to/ceph/src/global/signal_handler.cc:138
#3  <signal handler called>
#4  0x00007fb516ec9277 in raise () from /lib64/libc.so.6
#5  0x00007fb516eca968 in abort () from /lib64/libc.so.6
#6  0x00007fb519cefda0 in lockdep_will_lock (name=<optimized out>, id=<optimized out>, force_backtrace=<optimized out>) at /path/to/ceph/src/common/lockdep.cc:293
#7  0x00007fb5199cdcea in _will_lock (this=0x556eded26c40) at /path/to/ceph/src/common/Mutex.h:56
#8  Mutex::Lock (this=this@entry=0x556eded26c40, no_lockdep=no_lockdep@entry=false) at /path/to/ceph/src/common/Mutex.cc:92
#9  0x0000556edb4bd440 in Locker (m=..., this=<synthetic pointer>) at /path/to/ceph/src/common/Mutex.h:115
#10 stop (this=0x556eded26c40) at /path/to/ceph/src/rgw/rgw_rados.cc:3421
#11 stop (this=0x556eded8b1d0) at /path/to/ceph/src/rgw/rgw_rados.cc:3568
#12 ~RGWIndexCompletionManager (this=0x556eded8b1d0, __in_chrg=<optimized out>) at /path/to/ceph/src/rgw/rgw_rados.cc:3525
#13 RGWRados::finalize (this=this@entry=0x556edd5fc000) at /path/to/ceph/src/rgw/rgw_rados.cc:3756
#14 0x0000556edb4bd6de in RGWStoreManager::close_storage (store=0x556edd5fc000) at /path/to/ceph/src/rgw/rgw_rados.cc:13804
#15 0x0000556edb3ff458 in RGWRealmReloader::reload (this=0x7ffdd09ac3a0) at /path/to/ceph/src/rgw/rgw_realm_reloader.cc:90
#16 0x0000556edb31f469 in Context::complete (this=0x556eddbf86e0, r=<optimized out>) at /path/to/ceph/src/include/Context.h:70
#17 0x00007fb5199f68b4 in SafeTimer::timer_thread (this=0x7ffdd09ac3c0) at /path/to/ceph/src/common/Timer.cc:97
#18 0x00007fb5199f82dd in SafeTimerThread::entry (this=<optimized out>) at /path/to/ceph/src/common/Timer.cc:30
#19 0x00007fb522405e25 in start_thread () from /lib64/libpthread.so.0
#20 0x00007fb516f91bad in clone () from /lib64/libc.so.6

Related issues 2 (0 open2 closed)

Copied to rgw - Backport #35709: luminous: deadlock on shutdown in RGWIndexCompletionManager::stop()ResolvedPrashant DActions
Copied to rgw - Backport #35710: mimic: deadlock on shutdown in RGWIndexCompletionManager::stop()ResolvedPrashant DActions
Actions #1

Updated by Casey Bodley over 5 years ago

  • Status changed from New to 7
Actions #2

Updated by Casey Bodley over 5 years ago

  • Status changed from 7 to Pending Backport
Actions #3

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #35709: luminous: deadlock on shutdown in RGWIndexCompletionManager::stop() added
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #35710: mimic: deadlock on shutdown in RGWIndexCompletionManager::stop() added
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF