rgw: fix deadlock on RGWIndexCompletionManager::stop

The lock has been acquired in complete_op_data::stop
Fixes: http://tracker.ceph.com/issues/26949

Signed-off-by: Yao Zongyou <yaozongyou@vip.qq.com>